codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_pool_earliest_reset.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 4462
expression: "render_bottom_popup(&chat, 80)"
---
  Select Codex account


  1. Rotation: fill-first                Prefer the lowest priority among
                                         eligible profiles.
› 2. Rotation: earliest-reset (current)  Prefer due cooldowns, idle (not-yet-
                                         started) 5h windows, then the soonest
                                         reset.
  3. Automatic                           Let the scheduler pick the next
                                         eligible profile using the rotation
                                         strategy above.

  enter select · esc back
