codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_pool_help.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3670
expression: "render_bottom_popup(&chat, 80)"
---
  How your pool works
  Review current settings and quota-saving behavior.

   Accounts (3)   Strategy   Help

  Search accounts or settings

› Reserve quota    Switch near 95% used. Keep the remaining quota in reserve and
                   use it when other accounts are empty.
  Wait and resume  Wait up to 360 min for quota recovery and continue when safe.
                   Cancel the turn to stop waiting.
  Standby warmup   Small standby requests every 5 min start 5h clocks earlier.
                   They consume a little quota; weekly limits still apply.
  Reset credits    Manual only. Check /status for available reset credits.
  Change settings  Use `codex account config --help` to control warmup, waiting,
                   and automatic credit use.
  Manage accounts  Use `codex account --help` to add, relogin, label, enable, or
                   disable profiles.

  ← previous tab · → next tab · enter select · esc back
