codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_pool_strategy.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3665
expression: "render_bottom_popup(&chat, 80)"
---
  Automatic selection
  Both strategies use eligible accounts and preserve reserve quota.

   Accounts (3)   Strategy   Help

  Search accounts or settings

› By priority (current)  Use the lowest priority number first; keep others for
                         failover
  By reset time          Start idle 5h windows early, then prefer the soonest
                         reset

  ← previous tab · → next tab · enter select · esc back
